# xadrez-eletronico

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REPORT.md  sdkconfig  sdkconfig.defaults
Xadrez2/: .cproject  .project  sdkconfig.old
Xadrez2/main/: CMakeLists.txt  Fen_PGN.cpp  Jogo.cpp  app_types.h  chess_logic.h  led.c  led.h  main.c  sensor.c  sensor.h  server.c  server.h  valida_jogada .cpp
docs/: 01-visao-geral.md  02-arquitetura.md  03-hardware.md  04-firmware.md  05-montagem.md  06-testes.md  BOM.csv  BOM.md
docs/assets/diagrams/: README.md
docs/assets/images/: README.md
hardware/schematics/: README.md
hardware/stl/: README.md
main/: CMakeLists.txt  app_types.h  config.yaml  led.c  led_map_mode.c  main.c  sensor.c  server.c  server.c.bak-remove-lichess
main/include/: historical_games.h  project_config.h  runtime_config.h  stockfish_client.h
main/src/app/: project_config.c  runtime_config.c
main/src/chess/: chess_engine.c  historical_games.c
main/src/game/: server.c
main/src/net/: stockfish_client.c
main/web/data/: historical_plays.json
main/web/piece/cburnett/: SOURCE.md
scripts/: build.sh  clean.sh  flash_acm0.sh  install-run-command.sh  monitor_acm0.sh  run-chess.sh  run-map.sh
tests/reed_matrix_test/: CMakeLists.txt
tests/reed_matrix_test/main/: main.c
tools/: parse_led_map.c
