if(DEFINED ENV{XADREZ_MAP_MODE})
    set(XADREZ_MAIN_SRCS
        "src/tools/led_map_mode.c"
        "src/drivers/led.c"
    )
else()
    set(XADREZ_MAIN_SRCS
        "src/app/main.c"
        "src/app/project_config.c"
        "src/app/runtime_config.c"
        "src/chess/chess_logic.c"
        "src/chess/chess_engine.c"
        "src/drivers/led.c"
        "src/drivers/sensor.c"
        "src/game/server.c"
        "src/net/credentials.c"
        "src/net/stockfish_client.c"
    )
endif()

idf_component_register(
    SRCS ${XADREZ_MAIN_SRCS}
    INCLUDE_DIRS
        "include"
    EMBED_TXTFILES
        "config.yaml"
        "web/piece/cburnett/wK.svg"
        "web/piece/cburnett/wQ.svg"
        "web/piece/cburnett/wR.svg"
        "web/piece/cburnett/wB.svg"
        "web/piece/cburnett/wN.svg"
        "web/piece/cburnett/wP.svg"
        "web/piece/cburnett/bK.svg"
        "web/piece/cburnett/bQ.svg"
        "web/piece/cburnett/bR.svg"
        "web/piece/cburnett/bB.svg"
        "web/piece/cburnett/bN.svg"
        "web/piece/cburnett/bP.svg"
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        esp_http_client
        esp-tls
        esp_driver_gpio
        esp_driver_rmt
        nvs_flash
        wpa_supplicant
        espressif__led_strip
)
