if(DEFINED ENV{XADREZ_MAP_MODE})
    set(XADREZ_MAIN_SRCS
        "src/tools/led_map_mode.c"
        "src/drivers/led.c"
    )
else()
    set(XADREZ_MAIN_SRCS
        "src/app/main.c"
        "src/app/project_config.c"
        "src/app/runtime_config.c"
        "src/chess/chess_logic.c"
        "src/chess/chess_engine.c"
        "src/drivers/led.c"
        "src/drivers/sensor.c"
        "src/game/server.c"
        "src/net/credentials.c"
        "src/net/stockfish_client.c"
    )
endif()

idf_component_register(
    SRCS ${XADREZ_MAIN_SRCS}
    INCLUDE_DIRS
        "include"
    EMBED_TXTFILES
        "config.yaml"
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        esp_http_client
        esp-tls
        esp_driver_gpio
        esp_driver_rmt
        nvs_flash
        wpa_supplicant
        espressif__led_strip
)
